modulo18-seguranca/network-policy/network-policy-02.yaml

# Network Policy - Policy com restrição no namespace

#Network Policy 
# sobre: https://chatgpt.com/c/66e395d6-c3e4-800d-a01b-4e982981855c
# Comando para instalação do Calico

# bash
# kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.27.3/manifests/tigera-operator.yaml

# kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.27.3/manifests/custom-resources.yaml


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-nci-namespace-policy
  namespace: web-color
spec:
  podSelector:
    matchLabels:
      app: web # Seleciona todos os pods com a label app: web
  policyTypes:
  - Ingress # Ingress serve para permitir o tráfego de entrada
 # - Egress # Egress serve para permitir o tráfego de saída
  ingress: # Permite o tráfego de entrada
  - from:
    - podSelector:
        matchLabels:
          app: curl # Permite que o tráfego de entrada venha de pods com a label app: curl
      namespaceSelector:
        matchLabels:
          env: curl # Permite que o tráfego de entrada venha de pods no namespace com a label env: curl
    ports:
    - protocol: TCP
      port: 80
  egress: # Permite o tráfego de saída
  - to: # Permite que o tráfego de saída vá para
    - podSelector:
        matchLabels:
          app: web # Permite que o tráfego de saída vá para pods com a label app: web
    ports:
    - protocol: TCP
      port: 80  

  # Após aplicar,  precia recirar o Pod que quer o acesso para que a NetworkPolicy seja aplicada
  #  kc run curl --image cesarags/ubuntu:v1 -it -l app=curl -n web-color --rm -- /bin/bash
  # obs: (-l app=curl) é a label que o pod curl terá, para que a NetworkPolicy permita o acesso ao Pod web
  # (-n web-color) ou (-n curl) é o namespace que o pod curl será criado, para que a NetworkPolicy permita o acesso ao Pod web


  # Nesse exemplo foi criado uma NetworkPolicy que permite que o tráfego de entrada venha de pods com a label app: curl e do namespace com a label env: curl
  # e que o tráfego de saída vá para pods com a label app: web
